# pg-export-import

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  demo.py  main.py  pg_export_import.py  pyproject.toml  ruff.toml  test.py  test_pg_export_import.py
.github/workflows/: publish.yml
src/pg_export_import/: __init__.py  __main__.py  core.py  pipeline.py
