[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "pg-export-import"
version = "0.1.0b1"
description = "Stream-export filtered PostgreSQL rows to CSV and bulk-import via COPY"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "psycopg[binary]>=3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
markers = [
    "integration: requires a real PostgreSQL instance",
]

[tool.uv.sources]
pg-export-import = { workspace = true }

[dependency-groups]
dev = [
    "pg-export-import",
]
