[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "pg-export-import"
version = "0.1.0b1"
description = "Stream-export filtered PostgreSQL rows to CSV and bulk-import via COPY"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.11"
authors = [
    { name = "pg-export-import contributors" },
]
keywords = [
    "postgresql",
    "postgres",
    "csv",
    "export",
    "import",
    "copy",
    "database",
    "migration",
    "etl",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "psycopg[binary]>=3.1",
]

[project.urls]
Homepage = "https://github.com/rahulraina7/pg-export-import"
Repository = "https://github.com/rahulraina7/pg-export-import"
Issues = "https://github.com/rahulraina7/pg-export-import/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
markers = [
    "integration: requires a real PostgreSQL instance",
]

[tool.uv.sources]
pg-export-import = { workspace = true }

[dependency-groups]
dev = [
    "pg-export-import",
]
